--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^7.32.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
     "storybook": "^8.1.6"
   },
   "eslintConfig": {
