--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,8 @@
       "plugin:storybook/recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile": false
     },
     "rules": {}
   },
