--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
