--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-apexcharts": "^1.6.2",
+    "vue3-apexcharts": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
