--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@adminjs/express": "^6.1.0",
+    "@adminjs/mongoose": "^4.1.0",
+    "adminjs": "^7.8.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.7.0"
+    "express-formidable": "^1.2.0",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3"
   }
 }
