set up backend for auth

--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,15 @@
     "@adminjs/express": "^6.1.0",
     "@adminjs/mongoose": "^4.1.0",
     "adminjs": "^7.8.7",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-formidable": "^1.2.0",
+    "express-rate-limit": "^7.4.0",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.3",
+    "mongoose": "^8.5.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
