--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-formidable": "^1.2.0",
     "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.5.2",
     "prop-types": "^15.8.1",
