--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,9 @@
     "@adminjs/mongoose": "^4.1.0",
     "adminjs": "^7.8.8",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-formidable": "^1.2.0",
@@ -21,6 +22,7 @@
     "express-session": "^1.18.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.5.2",
+    "nodemailer": "^6.9.15",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
