--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-formidable": "^1.2.0",
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.15",
